--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.8.2",
+    "node-sass": "^4.11.0",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^15.6.2"
   },
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "sass": "node-sass --watch src/scss/style.scss src/styles/style.css"
   },
   "browserslist": [
     ">0.2%",
