Overflow to auto, commit package files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start sass",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
